// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`./ImageFallback.stories LargeSize 1`] = `
<div
  style="background-color: rgb(255, 255, 255); padding: 1rem;"
>
  <div
    class="shadcn-scope"
  >
    <img
      alt="Large image"
      height="96"
      src="https://safe-transaction-assets.safe.global/chains/1/chain_logo.png"
      width="96"
    />
  </div>
</div>
`;

exports[`./ImageFallback.stories SmallSize 1`] = `
<div
  style="background-color: rgb(255, 255, 255); padding: 1rem;"
>
  <div
    class="shadcn-scope"
  >
    <img
      alt="Small image"
      height="24"
      src="https://safe-transaction-assets.safe.global/chains/1/chain_logo.png"
      width="24"
    />
  </div>
</div>
`;

exports[`./ImageFallback.stories WithFallbackComponent 1`] = `
<div
  style="background-color: rgb(255, 255, 255); padding: 1rem;"
>
  <div
    class="shadcn-scope"
  >
    <img
      alt="Unknown"
      height="48"
      src="https://invalid-url.com/broken-image.png"
      width="48"
    />
  </div>
</div>
`;

exports[`./ImageFallback.stories WithFallbackSrc 1`] = `
<div
  style="background-color: rgb(255, 255, 255); padding: 1rem;"
>
  <div
    class="shadcn-scope"
  >
    <img
      alt="Token placeholder"
      height="48"
      src="https://invalid-url.com/broken-image.png"
      width="48"
    />
  </div>
</div>
`;

exports[`./ImageFallback.stories WithValidImage 1`] = `
<div
  style="background-color: rgb(255, 255, 255); padding: 1rem;"
>
  <div
    class="shadcn-scope"
  >
    <img
      alt="Ethereum logo"
      height="48"
      src="https://safe-transaction-assets.safe.global/chains/1/chain_logo.png"
      width="48"
    />
  </div>
</div>
`;
